2.7 Fixed the spacing and auto-format the code

--- a/Signin.css
+++ b/Signin.css
@@ -78,10 +78,10 @@ input:focus {
 }
 
 .form-row {
-    display: flex; 
-    width: 100%; 
-    align-items: center;   
-    margin-top: 10px; 
+    display: flex;
+    width: 100%;
+    align-items: center;
+    margin-top: 10px;
     text-align: left;
 }
 
@@ -94,8 +94,8 @@ input:focus {
     font-size: 14px;
 }
 
-.toggle-btn:hover{
-    color:#79aae1;
+.toggle-btn:hover {
+    color: #79aae1;
     text-decoration: underline;
 }
 
@@ -223,7 +223,7 @@ input:focus {
 }
 
 @media (max-width: 500px) {
-   .container {
+    .container {
         padding: 15px;
     }
 
@@ -237,26 +237,26 @@ input:focus {
     }
 
     .form-row {
-        flex-direction: row; 
-        align-items: center;  
+        flex-direction: row;
+        align-items: center;
         text-align: left;
     }
 
-   .toggle-btn {
-        width: 50%;
-        margin-left: 0;
+    .toggle-btn {
+        width: 37%;
+        margin: 0;
         align-items: center;
         flex-direction: row;
         justify-items: space-between;
-        padding-left: 0%;
+        padding: 0%;
     }
 
-   .role-buttons {
+    .role-buttons {
         flex-direction: column;
         align-items: center;
     }
 
-   .role-button {
+    .role-button {
         width: 100%;
         max-width: 300px;
         display: flex;
@@ -267,12 +267,12 @@ input:focus {
         padding: 12px;
     }
 
-   .role-button img {
+    .role-button img {
         width: 24px;
         height: 24px;
     }
 
-   .role-button.role-text {
+    .role-button.role-text {
         font-size: 16px;
     }
 }
